--- a/tis.config
+++ b/tis.config
@@ -12,7 +12,7 @@
     "main": "main",             // Specify the entry point function for the test (optional, default is "main")
     // The first character in the -val-args argument, usually a space, indicates the separator to split the string
     // between argv[1], argv[2], ... Here argv[1] will be "blah", argv[2] will be NULL:
-    "raw_options":{"-val-args": " README.md"}
+    "raw_options":{"-val-args": " README.md"},
     // We also need to make the file README.md available from inside the C interpreter for this test:
     "filesystem": {
       "system_errors": false,
